src/test/tests/syntaxError/doubleSemicolonIf.wacc
begin
    if false then int x = 3;; x = 4 else int y = 2 end
end